Enhance translation functionality by adding character limit, improve theme management, and update UI elements

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </div>
       <div class="card-title">Define Term</div>
     </div>
+<!--
   <div class="action-card toggle-card" data-value="newtab" id="newtabToggle">
   <div class="card-icon">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -71,6 +72,7 @@
   <div class="card-title">Custom New Tab</div>
   <div class="toggle-indicator"></div>
 </div>
+-->
 
   </div>
 </div>
@@ -83,6 +85,10 @@
             <option value="zh">Chinese</option>
             <option value="de">German</option>
           </select>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="arrow" style="margin-left: 10px; margin-right: 10px;">
+              <line x1="5" y1="12" x2="19" y2="12"></line>
+              <polyline points="12 5 19 12 12 19"></polyline>
+            </svg>
           <select id="targetLanguage" class="language-select">
             <option value="en">English</option>
             <option value="zh" selected>Chinese</option>
