--- a/old/newtab.html
+++ b/old/newtab.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>New Tab</title>
       <link rel="stylesheet" href="newtab.css">
-<link rel="icon" type="image/png" href="GPE.png">
+<link rel="icon" type="image/png" href="../GPE.png">
   <style>
   </style>
 </head>
