--- a/index.html
+++ b/index.html
@@ -39,17 +39,20 @@
       </div>
       <div class="card-title">Translate Text</div>
     </div>
-
-
-    <div class="action-card" data-value="search">
+<div class="action-card" data-value="ask">
       <div class="card-icon">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <circle cx="11" cy="11" r="8"></circle>
-          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+          <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path>
+          <path d="M12 17h.01"></path>
+          <circle cx="12" cy="12" r="10"></circle>
         </svg>
       </div>
-      <div class="card-title">Search Online</div>
+      <div class="card-title">Ask AI</div>
     </div>
+
+
+
+    
 
     <div class="action-card" data-value="define">
       <div class="card-icon">
@@ -60,6 +63,16 @@
       </div>
       <div class="card-title">Define Term</div>
     </div>
+<div class="action-card" data-value="search">
+      <div class="card-icon">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="11" cy="11" r="8"></circle>
+          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+      </div>
+      <div class="card-title">Search Online</div>
+    </div>
+
 <!--
   <div class="action-card toggle-card" data-value="newtab" id="newtabToggle">
   <div class="card-icon">
