--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
       </div>
       <div class="card-title">Define Term</div>
     </div>
-<div class="action-card" data-value="search">
-      <div class="card-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <div class="action-card" data-value="search">
+          <div class="card-icon">
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <circle cx="11" cy="11" r="8"></circle>
           <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
         </svg>
+          </div>
+          <div class="card-title">Search Online</div>
       </div>
-      <div class="card-title">Search Online</div>
-    </div>
 
 <!--
   <div class="action-card toggle-card" data-value="newtab" id="newtabToggle">
@@ -140,8 +140,17 @@
           <p>Your text has been translated successfully!</p>
         </div>
       </div>
+      <div class="history-section">
+      <h3>History</h3>
+      <ul id="historyList" style="margin-top: 12px;">
+        <!-- History items will be populated here -->
+      </ul>
     </div>
-  </div>
+    </div> <!-- End of content div -->
+
+
+
+  </div> <!-- End of container div -->
   <script src="popup.js"></script>
 </body>
 </html>
